--- a/composer.json
+++ b/composer.json
@@ -141,7 +141,8 @@
     "codeception/codeception": "2.4.0",
     "codeception/phpunit-wrapper": "^7.0",
     "phpstan/phpstan": "^0.7",
-    "shopsys/coding-standards": "^3.1.1"
+    "shopsys/coding-standards": "^3.1.1",
+    "maglnet/composer-require-checker": "^0.2.1"
   },
   "scripts": {
     "post-install-cmd": [
