--- a/project-base/app/config/domains.yml
+++ b/project-base/app/config/domains.yml
@@ -7,3 +7,8 @@ domains:
     name: 2.shopsys
     locale: cs
     styles_directory: domain2
+
+  - id: 3
+    name: 3.shopsys
+    locale: sk
+    styles_directory: domain2
