Prototype of US-2652 - multidomain entities rewritten similarly as translation entities
- not working ATM (problems with metadata and implicit domain ID setting)
- Prezent\doctrine-translation copied and replaced "locale" => "domainId", "translation" => "domain", "translatable" => "multidomain", "Prezent" => "Shopsys"

--- a/packages/framework/src/Resources/config/services.yml
+++ b/packages/framework/src/Resources/config/services.yml
@@ -791,3 +791,19 @@ services:
 
   Shopsys\FrameworkBundle\Model\Pricing\Vat\VatFactoryInterface:
     alias: Shopsys\FrameworkBundle\Model\Pricing\Vat\VatFactory
+
+  Shopsys\FrameworkBundle\Component\Doctrine\Multidomain\DomainIdListener:
+    tags: [ kernel.event_subscriber ]
+
+  Shopsys\FrameworkBundle\Component\Doctrine\Multidomain\EventListener\MultidomainListener:
+    arguments:
+      - '@shopsys.multidomain.metadata_factory'
+    tags: [ doctrine.event_subscriber ]
+
+  shopsys.multidomain.driver_chain:
+    class: Metadata\Driver\DriverChain
+
+  shopsys.multidomain.metadata_factory:
+    class: Metadata\MetadataFactory
+    arguments:
+      - '@shopsys.multidomain.driver_chain'
