Brand has a shortcut to BrandData attributes, no BrandDetail needed

--- a/packages/framework/src/Resources/config/services.yml
+++ b/packages/framework/src/Resources/config/services.yml
@@ -804,3 +804,6 @@ services:
     class: Metadata\MetadataFactory
     arguments:
       - '@shopsys.multidomain.driver_chain'
+
+  Shopsys\FrameworkBundle\Model\Product\Brand\BrandDomainIdListener:
+    tags: [ doctrine.event_subscriber ]
