demo data loader via entity data and entity creators (dead-end)

--- a/packages/framework/src/Resources/config/services.yml
+++ b/packages/framework/src/Resources/config/services.yml
@@ -17,6 +17,10 @@ services:
     resource: '../../**/*{Calculation,Facade,Factory,Generator,Handler,InlineEdit,Listener,Loader,Mapper,Parser,Provider,Recalculator,Registry,Repository,Resolver,Service,Scheduler,Subscriber,Transformer}.php'
     exclude: '../../{Command,Controller,DependencyInjection,Form,Migrations,Resources,Twig}'
 
+  Shopsys\FrameworkBundle\Model\:
+    resource: '../../Model/**/*{Facade,Factory,Repository}.php'
+    public: true
+
   Shopsys\FrameworkBundle\Model\AdvancedSearch\Filter\:
     resource: '../../Model/AdvancedSearch/Filter/*Filter.php'
 
