--- a/build.xml
+++ b/build.xml
@@ -137,7 +137,7 @@
         </exec>
     </target>
 
-    <target name="phpstan" description="Performs static analysis of PHP files using PHPStan on all packages and microservices.">
+    <target name="phpstan" description="Performs static analysis of PHP files using PHPStan on all packages.">
         <exec executable="${path.phpstan.executable}" logoutput="true" passthru="true" checkreturn="true">
             <arg value="analyze"/>
             <arg value="-c"/>
@@ -145,7 +145,6 @@
             <arg path="${path.src}"/>
             <arg path="${path.tests}"/>
             <arg path="./packages/*/src"/>
-            <arg path="./microservices/*/src"/>
             <arg path="./packages/*/tests"/>
             <arg value="--level=0"/>
         </exec>
