added standard to check services files are alphabetically sorted

--- a/project-base/yaml-standards.yaml
+++ b/project-base/yaml-standards.yaml
@@ -13,3 +13,13 @@
             parameters:
                 { serviceAliasingType: long, indents: 4 }
         -   pathToChecker: YamlStandards\Model\YamlEmptyLineAtEnd\YamlEmptyLineAtEndChecker
+
+-   pathsToCheck:
+        - ./project-base/service*.{yml,yaml}
+    excludedPaths:
+        - ./project-base/node_modules/service*.{yml,yaml}
+    checkers:
+        -   pathToChecker: YamlStandards\Model\YamlAlphabetical\YamlAlphabeticalChecker
+            parameters:
+                depth: 3
+                prioritizedKeys: [ imports ]
