added standard to check services files observe space between groups

--- a/project-base/yaml-standards.yaml
+++ b/project-base/yaml-standards.yaml
@@ -23,3 +23,6 @@
             parameters:
                 depth: 3
                 prioritizedKeys: [ imports ]
+        -   pathToChecker: YamlStandards\Model\YamlSpacesBetweenGroups\YamlSpacesBetweenGroupsChecker
+            parameters:
+                { level: 2 }
